# ecs-python-sample

./: Makefile  Readme.md  docker-compose.dev.yml  docker-compose.stg.yml  docker-compose.yml  script.sh
api/: Dockerfile  pyproject.toml
api/src/: main.py
