[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["krkettle <catrarazou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"
boto3 = "^1.17.27"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
